--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@google-cloud/vision": "^1.11.0",
         "axios": "^0.19.2",
         "cheerio": "^1.0.0-rc.3",
+        "moment": "^2.24.0",
         "mongoose": "^5.9.6"
     }
 }
