--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     },
     "dependencies": {
         "@google-cloud/vision": "^1.11.0",
+        "@tensorflow/tfjs": "^1.7.2",
+        "@tensorflow/tfjs-node": "^1.7.2",
         "axios": "^0.19.2",
         "cheerio": "^1.0.0-rc.3",
         "moment": "^2.24.0",
