--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"registered":["UFC Fight Night: Lee vs. Oliveira"]}
+{"registered":["UFC Fight Night: Lee vs. Oliveira","UFC 248: Adesanya vs. Romero","UFC Fight Night: Benavidez vs. Figueiredo"]}
