--- a/config.json
+++ b/config.json
@@ -1,1 +1,24 @@
-{"registered":["UFC Fight Night: Lee vs. Oliveira","UFC 248: Adesanya vs. Romero","UFC Fight Night: Benavidez vs. Figueiredo","UFC Fight Night: Felder vs. Hooker","UFC Fight Night: Anderson vs. Blachowicz","UFC Fight Night: Blaydes vs. Dos Santos","UFC 246: McGregor vs. Cowboy","UFC Fight Night: Edgar vs. The Korean Zombie","UFC 245: Usman vs. Covington","UFC Fight Night: Overeem vs. Rozenstruik","UFC Fight Night: Zabit vs. Kattar","UFC 244: Masvidal vs. Diaz"]}
+{
+    "registered": [
+        "UFC Fight Night: Lee vs. Oliveira",
+        "UFC 248: Adesanya vs. Romero",
+        "UFC Fight Night: Benavidez vs. Figueiredo",
+        "UFC Fight Night: Felder vs. Hooker",
+        "UFC Fight Night: Anderson vs. Blachowicz",
+        "UFC Fight Night: Blaydes vs. Dos Santos",
+        "UFC 246: McGregor vs. Cowboy",
+        "UFC Fight Night: Edgar vs. The Korean Zombie",
+        "UFC 245: Usman vs. Covington",
+        "UFC Fight Night: Overeem vs. Rozenstruik",
+        "UFC Fight Night: Zabit vs. Kattar",
+        "UFC 244: Masvidal vs. Diaz",
+        "UFC Fight Night: Maia vs. Askren",
+        "UFC Fight Night: Reyes vs. Weidman",
+        "UFC 243: Whittaker vs. Adesanya",
+        "UFC Fight Night: Hermansson vs. Cannonier",
+        "UFC Fight Night: Rodriguez vs. Stephens",
+        "UFC Fight Night: Cowboy vs. Gaethje",
+        "UFC 242: Khabib vs. Poirier",
+        "UFC Fight Night: Andrade vs. Zhang"
+    ]
+}
