--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "node": "12.12.0"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.0.6",
+    "antd": "^4.1.3",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "mongoose": "^5.8.9",
     "morgan": "^1.10.0",
-    "password-hash": "^1.2.2"
+    "password-hash": "^1.2.2",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   }
 }
