--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.0.6",
+    "@tensorflow/tfjs": "^1.7.2",
+    "@tensorflow/tfjs-node": "^1.7.2",
     "antd": "^4.1.3",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
@@ -32,6 +34,7 @@
     "mongoose": "^5.8.9",
     "morgan": "^1.10.0",
     "password-hash": "^1.2.2",
+    "rimraf": "^3.0.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   }
