--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
+    "js-combinatorics": "^0.5.5",
     "mongoose": "^5.8.9",
     "morgan": "^1.10.0",
     "password-hash": "^1.2.2",
