--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "datta-able-rv18.0.4",
+  "name": "algox",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://html.codedthemes.com/datta-able/react/default",
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "@amcharts/amcharts3-react": "^3.1.0",
     "@amcharts/amcharts4": "^4.9.13",
