--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^5.8.9",
     "morgan": "^1.10.0",
     "password-hash": "^1.2.2",
+    "react-scripts": "^3.4.1",
     "rimraf": "^3.0.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
